--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          flutter-version: '2.10.0'
 
       - name: Flutter Version
         run: flutter --version
