--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -25,7 +25,7 @@ jobs:
         run: flutter --version
       
       - name: Get Dependencies
-        run: flutter pub get
+        run: flutter packages get
 
       - name: Run Tests
         run: flutter test
