--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -22,10 +22,10 @@ jobs:
           flutter-version: '2.10.0'
 
       - name: Flutter Version
-        run: flutter --version
+        run: flutter doctor
       
       - name: Get Dependencies
-        run: flutter packages get
+        run: flutter pub get && dart pub cache repair
 
       - name: Run Tests
         run: flutter test
