--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   lottie: ^1.2.1
   http: ^0.13.4
   json_annotation: ^4.4.0 
-  shared_preferences: ^2.0.13
+  camera: ^0.9.4+19
+  path_provider: ^2.0.9
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
